Kata 11
Se resuelve ejercicio 11.
Se mapea el list para crear una estructura map con las caracteristicas solicitadas, name,list,movieid,movietitle,movieTime y BoxArt.
en videoList, movieTime y boxArt se hace un filter junto a equal para emparejar cada elemento con su VideoList correspondiente.